# neuromancers-community-platform

./: .actrc  .dockerignore  .env.development  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTORS.txt  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  blacklist.txt  build.sh  docker-compose.ci.yml  docker-compose.coolify.yml  docker-compose.docs.yml  docker-compose.local.yml  docker-compose.production.yml  docker-compose.yml  entrypoint.sh  fly.toml  justfile  manage.py  package-lock.json  package.json  prometheus.yml  pyproject.toml  render.yaml  requirements.txt  skills-lock.json  tox.ini
.devcontainer/: devcontainer.json
.envs/.local/: .django  .postgres
.envs/.production/: .django  .postgres
.github/: CONTRIBUTING.md  copilot-instructions.md  dependabot.yml
.github/act/: deploy_payload.json
.github/workflows/: backup.yml  ci.yml  deploy.yml  fly-deploy.yml  lint_python.yml  test_python.yml
apps/account_settings/: apps.py  models.py
apps/accounts/: adapters.py  admin.py  choices.py  defaults.py  factories.py  forms.py  mixins.py  models.py  notifications.py  signals.py  utils.py  validators.py  views.py  wagtail_hooks.py
apps/blog/: models.py
apps/common/: getpronto.py  imagekit.py  utils.py
apps/contact/: models.py
apps/core/: blocks.py  context_processors.py  custom_blocks.py  models.py  views.py  wagtail_hooks.py  wagtail_widgets.py  widgets.py
apps/events/: blocks.py  calendar_export.py  choices.py  decorators.py  factories.py  form_fields.py  forms.py  mixins.py  models.py  notifications.py  signals.py  utils.py  validators.py  views.py  wagtail_hooks.py
assets/css/: _fonts.css  _fonts.css.map  base.css  color_picker.css  common.css  common.css.map  emoji_picker.css  styles.css  styles.css.map
assets/js/: accordion.js  block_border.js  color_picker.js  core.js  emoji_picker.js  feed_filters.js  hero.js  request_calendar.js  typed_multiple_select.js
assets/scss/: _animations.scss  _common.scss  _emoji_picker.scss  _fonts.scss  _mixins.scss  _variables.scss  styles.scss
config/: api.py  celery_app.py  urls.py  wsgi.py
config/settings/: base.py  dev.py  local.py  production.py  test.py
data/: stripe_currencies.txt  username_banned_wordlist.txt
docs/: conf.py  howto.rst  implementation-audit-2026-05-09.md  index.rst  make.bat  plan.md  users.rst
docs/agents/: roadmap-auditor.agent.md
docs/infra/: coolify-env-mapping.md  deployment-pipeline.md  index.md  operator-guide.md  rollback-plan.md  secrets-runbook.md
docs/instructions/: djstripe.instructions.md  getpronto.instructions.md  stripeconnect.instructions.md  wagtail.instructions.md
iac/: ansible.cfg
iac/backups/: backup-script.sh
iac/docs/: coolify-env-mapping.md  operator-guide.md  secrets-runbook.md
iac/galaxy/: requirements.yml
iac/inventory/: hosts.yml
iac/monitoring/: gatus-config.yml
iac/playbooks/: site.yml
iac/scripts/: clear-django-sessions.sh  run-backup.sh
iac/security/: crowdsec-config.yml
infra/galaxy/: requirements.yml
infra/inventory/: hosts.yml
infra/monitoring/: gatus-config.yml  prometheus.yml
infra/playbooks/: backup_application.yml  deploy_application.yml  setup_coolify.yml  site.yml
infra/scripts/: bootstrap.sh  refresh-tailscale-certs.sh  run-backup.sh
infra/security/: crowdsec-acquisition.yml  crowdsec-config.yml  django-disallowedhost.conf  fail2ban-jail.local
infra/tailscale/: app-config.json  monitor-config.json
neuromancers/: urls.py  wsgi.py
neuromancers/settings/: base.py  bots.py  countries.py  currencies.py  dev.py  languages.py  name_blacklist.py  production.py  stripe_currencies.py
neuromancers_network/: __init__.py  conftest.py
neuromancers_network/admin_guide/: apps.py  models.py  views.py  wagtail_hooks.py
neuromancers_network/common/: apps.py  binder.py  decorators.py  getpronto.py  image_operations.py  mjml.py  storage.py  stripe.py  views.py  wagtail_hooks.py
neuromancers_network/core/: apps.py  context_processors.py  mailer.py  middleware.py  security.py  signals.py  wagtail_hooks.py
neuromancers_network/emails/: apps.py  models.py  utils.py  views.py  wagtail_hooks.py
neuromancers_network/events/: apps.py  checkout.py  signals.py  tasks.py  tests.py  urls.py  webhook_handlers.py
neuromancers_network/messaging/: admin.py  apps.py  models.py  urls.py  views.py
neuromancers_network/moderation/: admin.py  apps.py  models.py
neuromancers_network/templates/: base.html
neuromancers_network/users/: adapters.py  admin.py  apps.py  forms.py  models.py  signals.py  views.py  wagtail_hooks.py
reports/: .coverage  coverage.xml
requirements/: base.in  base.txt  development.in  development.txt  production.in  production.txt
scripts/: load_icons.sh
static/: staticfiles.json
templates/: 404.html  500.html  base.html
templates/account/: account_inactive.html  base_confirm_code.html  base_reauthenticate.html  confirm_email_verification_code.html  confirm_login_code.html  confirm_password_reset_code.html  confirm_phone_verification_code.html  email.html  email_change.html  email_confirm.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_done.html  password_set.html  phone_change.html  reauthenticate.html  request_login_code.html  signup.html  signup_closed.html  verification_sent.html  verified_email_required.html
templates/accounts/: host_dashboard.html  notification_inbox.html  profile.html  profile_base.html  user_profile.html  user_settings.html
templates/blog/: blog_index_page.html  blog_page.html
templates/contact/: contact_form_page.html  contact_form_page_landing.html
templates/core/: home_page.html  welcome_page.html
templates/events/: choose_session_type.html  create_base.html  create_session.html  edit_session.html  manage_session_availability.html  payment_history.html  payment_success.html  request_schedule_session.html  request_schedule_session_preview.html  sessions_index_page.html  view_session.html
templates/includes/: accordion.html  block_border.html  header.html  (+10 more)
tests/: runner.py
(+382 files in other folders)
