[project]
dynamic = ["version"]
name = "neuromancers"
dependencies = [
    "anyascii==0.3.3",
    "appnope==0.1.4",
    "asgiref==3.11.1",
    "asttokens==3.0.0",
    "attrs==25.3.0",
    "backcall==0.2.0",
    "beautifulsoup4==4.14.3",
    "bleach==6.2.0",
    "brotli==1.2.0",
    "build==1.3.0",
    "cachetools==6.1.0",
    "calmjs-parse==1.3.3",
    "certifi==2026.1.4",
    "chardet==5.2.0",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "csscompressor==0.9.5",
    "decorator==5.2.1",
    "defusedxml==0.7.1",
    "distlib==0.4.0",
    "dj-database-url==3.1.2",
    "django==6.0.4",
    "django-allauth==65.14.1",
    "django-appconf==1.1.0",
    "django-cogwheels==0.3",
    "django-components==0.148.0",
    "django-compressor==4.5.1",
    "django-environ==0.12.0",
    "django-filter==25.2",
    "django-guardian==3.0.3",
    "django-modelcluster==6.4.1",
    "django-permissionedforms==0.1",
    "django-stubs-ext==5.2.9",
    "django-taggit==6.1.0",
    "django-tasks==0.9.0",
    "django-treebeard==4.8.0",
    "djangorestframework==3.16.1",
    "djc-core==1.3.0",
    "draftjs-exporter==5.2.0",
    "emoji==2.15.0",
    "et-xmlfile==2.0.0",
    "executing==2.2.0",
    "fastjsonschema==2.21.1",
    "filelock==3.20.3",
    "filetype==1.2.0",
    "gunicorn==25.1.0",
    "heroicons==2.11.0",
    "identify==2.6.12",
    "idna==3.11",
    "imagekitio==5.2.0",
    "importlib-metadata==8.7.0",
    "ipython==8.12.3",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "jsonschema==4.25.0",
    "jsonschema-specifications==2025.4.1",
    "laces==0.1.2",
    "markdown==3.8.2",
    "markupsafe==3.0.2",
    "mccabe==0.7.0",
    "mistune==3.1.3",
    "modelsearch==1.1.1",
    "nodeenv==1.9.1",
    "openpyxl==3.1.5",
    "parso==0.8.4",
    "pexpect==4.9.0",
    "pickleshare==0.7.5",
    "pillow==12.2.0",
    "pillow-heif==1.2.0",
    "pluggy==1.6.0",
    "ply==3.11",
    "prompt-toolkit==3.0.51",
    "psycopg2-binary==2.9.11",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyzmq==27.0.0",
    "rcssmin==1.1.2",
    "referencing==0.36.2",
    "regex==2024.11.6",
    "requests==2.33.0",
    "rjsmin==1.2.2",
    "rpds-py==0.26.0",
    "soupsieve==2.8.3",
    "sqlparse==0.5.5",
    "stack-data==0.6.3",
    "stripe==12.3.0",
    "telepath==0.3.1",
    "tinycss2==1.4.0",
    "tornado==6.5.5",
    "traitlets==5.14.3",
    "typing-extensions==4.15.0",
    "uritemplate==4.2.0",
    "urllib3==2.6.3",
    "uvicorn==0.41.0",
    "wagtail==7.3.1",
    "wagtailmenus",
    "wcwidth==0.2.13",
    "webencodings==0.5.1",
    "wheel==0.46.2",
    "whitenoise==6.12.0",
    "willow==1.12.0",
    "yarg==0.1.9",
    "zipp==3.23.0",
]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "django"
combine_as_imports = true
include_trailing_comma = true
line_length = 88
multi_line_output = 3
known_first_party = ["config"]

[tool.djlint]
profile = "django"
ignore = "H031"
blank_line_before_tag="load,extends,include,block,element,slot,setvar"
custom_blocks="element,slot,setvar,accordion"

[tool.coverage.run]
source = ["apps"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/test_*.py",
    "manage.py",
    "*/wsgi.py",
]
branch = true
command_line = "./manage.py test --noinput . apps"
data_file = "reports/.coverage"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "@property",
    "@cached_property",
]
precision = 2
skip_covered = false
ignore_errors = true

[tool.coverage.html]
directory = "reports/coverage"

[tool.coverage.xml]
output = "reports/coverage.xml"

[tool.setuptools]
package-dir = {"" = "apps"}

[tool.uv.sources]
wagtailmenus = { git = "https://github.com/baldwinboy/wagtailmenus", rev = "master" }

[dependency-groups]
dev = [
    "black==25.1.0",
    "cfgv==3.4.0",
    "colorama==0.4.6",
    "coverage==7.6.11",
    "cssbeautifier==1.15.4",
    "django-debug-toolbar==6.0.0",
    "djlint==1.36.4",
    "docopt==0.6.2",
    "editorconfig==0.17.1",
    "factory-boy==3.3.3",
    "faker==38.2.0",
    "flake8==7.3.0",
    "genbadge==1.1.3",
    "isort==6.0.1",
    "jsbeautifier==1.15.4",
    "json5==0.12.0",
    "jupyter-client==8.6.3",
    "jupyter-core==5.8.1",
    "jupyterlab-pygments==0.3.0",
    "matplotlib-inline==0.1.7",
    "model-bakery==1.20.5",
    "mypy-extensions==1.1.0",
    "nbclient==0.10.2",
    "nbconvert==7.17.1",
    "nbformat==5.10.4",
    "packaging==25.0",
    "pandocfilters==1.5.1",
    "pathspec==0.12.1",
    "pip==26.0",
    "pip-tools==7.5.2",
    "platformdirs==4.3.8",
    "pre-commit==4.2.0",
    "pycodestyle==2.14.0",
    "pyflakes==3.4.0",
    "pygments==2.20.0",
    "pyproject-api==1.9.1",
    "pyproject-hooks==1.2.0",
    "pyyaml==6.0.2",
    "setuptools==80.9.0",
    "six==1.17.0",
    "tox==4.28.2",
    "tqdm==4.67.1",
    "tzdata==2025.2",
    "virtualenv==20.36.1",
]
