[project]
name = "neuromancers_network"
version = "1.0.0"
description = "NEUROMANCERS offers a network for users to offer and request online support"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "NEUROMANCERS", email = "hello@neuromancers.org.uk" },
]
requires-python = "==3.14.*"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "argon2-cffi==25.1.0",
  "celery==5.6.3",
  "crispy-tailwind>=1.0.3",
  "dj-stripe>=2.10.3",
  "django==6.0.5",
  "django-allauth[mfa]==65.16.1",
  "django-anymail==15.0",
  "django-auditlog>=3.4.1",
  "django-celery-beat==2.9.0",
  "django-colorfield>=0.14.0",
  "django-compressor==4.6.0",
  "django-cookie-consent>=1.0.0",
  "django-cors-headers==4.9.0",
  "django-crispy-forms==2.6",
  "django-environ==0.13.0",
  "django-filter>=25.2",
  "django-fsm-2>=4.2.4",
  "django-guardian>=3.3.1",
  "django-htmx>=1.27.0",
  "django-model-utils==5.0.0",
  "django-ninja==1.6.2",
  "django-phonenumber-field[phonenumbers]>=8.4.0",
  "django-recurrence>=1.14",
  "django-recurring>=1.3.3",
  "django-redis==6.0.0",
  "django-rosetta>=0.10.3",
  "django-smart-ratelimit[redis]>=2.2.1",
  "django-storages[s3]==1.14.6",
  "django-tagging>=0.5.0",
  "django-tailwind-cli>=4.6.0",
  "django-widget-tweaks>=1.5.1",
  "flower==2.0.1",
  "gunicorn==26.0.0",
  "hiredis==3.3.1",
  "httpx>=0.28.1",
  "pillow==12.2.0",
  "pre-commit>=4.6.0",
  "psycopg[c]==3.3.4",
  "python-slugify==8.0.4",
  "redis==7.4.0",
  "sentry-sdk==2.59.0",
  "stripe>=15.1.0",
  "uvicorn>=0.46.0",
  "wagtail>=7.3.1",
  "wagtail-color-panel>=1.8.1",
  "wagtail-icon-chooser>=0.3.2",
  "wagtail-link-block>=1.2",
  "wagtail-markdown>=0.13.0",
  "wagtail-traverse>=1.0.1",
  "wagtailmenus>=4.0.7",
  "whitenoise==6.12.0",
]

[dependency-groups]
dev = [
  "ansible>=13.6.0",
  "autopep8>=2.3.2",
  "coverage==7.13.5",
  "django-coverage-plugin==3.2.2",
  "django-debug-toolbar==6.3.0",
  "django-extensions==4.1",
  "django-stubs[compatible-mypy]==6.0.3",
  "djlint==1.36.4",
  "factory-boy==3.3.3",
  "ipdb==0.13.13",
  "isort>=8.0.1",
  "mypy==1.20.2",
  "pre-commit==4.6.0",
  "psycopg[c]==3.3.4",
  "pytest==9.0.3",
  "pytest-django==4.12.0",
  "pytest-sugar==1.1.1",
  "ruff==0.15.12",
  "sphinx==9.1.0",
  "sphinx-autobuild==2025.8.25",
  "watchfiles==1.1.1",
  "werkzeug[watchdog]==3.1.8",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
extend-exclude = [
  "*/migrations/*.py",
  "staticfiles/*",
]

lint.select = [
  "A",
  "ASYNC",
  "B",
  "BLE",
  "C4",
  "C90",
  "COM",
  "DJ",
  "DTZ",
  "E",
  "EM",
  "ERA",
  "EXE",
  "F",
  "FA",
  "FBT",
  "FLY",
  "G",
  "I",
  "ICN",
  "INP",
  "INT",
  "ISC",
  "N",
  "PD",
  "PERF",
  "PGH",
  "PIE",
  "PL",
  "PT",
  "PTH",
  "PYI",
  "Q",
  "RET",
  "RSE",
  "RUF",
  "S",
  "SIM",
  "SLF",
  "SLOT",
  "T10",
  "T20",
  "TC",
  "TID",
  "TRY",
  "UP",
  "W",
  "YTT",
]
lint.ignore = [
  "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
  "S101",   # Use of assert detected https://docs.astral.sh/ruff/rules/assert/
  "SIM102", # sometimes it's better to nest
  # of types for comparison.
  # Deactivated because it can make the code slow:
  # https://github.com/astral-sh/ruff/issues/7871
]
lint.isort.force-single-line = true
unsafe-fixes = true

[tool.pyproject-fmt]
keep_full_version = true

# ==== pytest ====

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--ds=config.settings.test --reuse-db --import-mode=importlib"
python_files = [
  "tests.py",
  "test_*.py",
]

# ==== Coverage ====

[tool.coverage.run]
include = [ "neuromancers_network/**" ]
omit = [ "*/migrations/*", "*/tests/*" ]
plugins = [ "django_coverage_plugin" ]

# ==== mypy ====

[tool.mypy]
python_version = "3.14"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
plugins = [
  "mypy_django_plugin.main",
]

[[tool.mypy.overrides]]
# Django migrations should not produce any errors:
module = "*.migrations.*"
ignore_errors = true

[tool.django-stubs]
django_settings_module = "config.settings.test"

# ==== djLint ====

[tool.djlint]
blank_line_after_tag = "load,extends"
close_void_tags = true
format_css = true
format_js = true
# TODO: remove T002 when fixed https://github.com/djlint/djLint/issues/687
ignore = "H006,H030,H031,T002"
include = "H017,H035"
indent = 2
max_line_length = 119
profile = "django"

[tool.djlint.css]
indent_size = 2

[tool.djlint.js]
indent_size = 2

# ==== autopep8 ====

[tool.autopep8]
in-place = true
recursive = true
aggressive = 20
